Switch InternalContext to store dependency/source pairs more compactly.
First, use an ArrayList instead of LinkedList, since it has only 4-8
bytes overhead per entry (depending on resize phase).  Second, remove
the overhead of the DependencyAndSource object, which saves 8 bytes per
object, and materialize only when getDependencyChain() is called.

-------------
Created by MOE: http://code.google.com/p/moe-java
MOE_MIGRATED_REVID=47284141